--- a/src/aura/AS_Community_ProductDetails/AS_Community_ProductDetails.cmp
+++ b/src/aura/AS_Community_ProductDetails/AS_Community_ProductDetails.cmp
@@ -7,6 +7,7 @@
                  force:hasRecordId">
     <aura:attribute name="product" type="Object"/>
     <aura:attribute name="price" type="String"/>
+    <aura:attribute name="discountPrice" type="String"/>
     <aura:handler name="init" value="{!this}" action="{!c.onInit}"/>
 
 
@@ -32,6 +33,10 @@
         </div>
         <div class="price">
             <p class="price-word">Price: </p>
+            <div class="oldPrice">
+                <p>179 $</p>
+                <div class="score-price-out"></div>
+            </div>
             <p class="price-number">{!v.price} $</p>
         </div>
         <h1 class="description-title">Description</h1>
