--- a/src/aura/AS_Community_ProductDetails/AS_Community_ProductDetails.css
+++ b/src/aura/AS_Community_ProductDetails/AS_Community_ProductDetails.css
@@ -36,6 +36,40 @@
 
 }
 
+.THIS .price-word,
+.THIS .oldPrice p{
+    font-size: 1rem;
+    margin-right: 0.5rem;
+}
+
+.THIS .price-number{
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: green;
+}
+
+.THIS .oldPrice {
+    position: relative;
+}
+
+.THIS .oldPrice p{
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: red;
+}
+
+.THIS .oldPrice::after{
+    content: "";
+    width: 100%;
+    height: 2px;
+    background: green;
+    position: absolute;
+    bottom: 14px;
+    left: 0;
+}
+
+
+
 .THIS .stars > div{
     display: inline-block;
     padding: 20px 20px 20px 0;
@@ -56,16 +90,7 @@
     color: #d7d700;
 }
 
-.THIS .price-word{
-    font-size: 1rem;
-    margin-right: 0.5rem;
-}
 
-.THIS .price-number {
-    font-size: 1.2rem;
-    font-weight: bold;
-    color: green;
-}
 
 .THIS .description-title{
     font-size: 1.3rem;
@@ -92,3 +117,4 @@ margin-top: 1.5rem;
     font-weight: bold;
     padding: 0.7rem;
 }
+
