--- a/src/aura/AS_DiscountManager_PB_DetailsSection/AS_DiscountManager_PB_DetailsSection.css
+++ b/src/aura/AS_DiscountManager_PB_DetailsSection/AS_DiscountManager_PB_DetailsSection.css
@@ -8,3 +8,16 @@
     width: 100%;
     height: 100%;
 }
+
+.THIS .table-name-section{
+    max-width: 4rem;
+    text-overflow:ellipsis;
+    overflow: hidden;
+}
+
+.THIS .table-name-section:hover{
+    max-width: none;
+    overflow: visible;
+    background-color: inherit;
+    z-index: 1000;
+}
