--- a/src/aura/AS_DiscountManager_PB_DetailsSection/AS_DiscountManager_PB_DetailsSection.cmp
+++ b/src/aura/AS_DiscountManager_PB_DetailsSection/AS_DiscountManager_PB_DetailsSection.cmp
@@ -6,61 +6,50 @@
                 implements="flexipage:availableForAllPageTypes,forceCommunity:availableForAllPageTypes,flexipage:availableForRecordHome,force:appHostable"
                 controller="AS_DiscountManager_Controller"
 >
-    <aura:handler event="c:AS_DiscountManager_PriceBook_Event" action="{!c.loadDetails}"/>
-    <!--    <aura:handler name="init" value="{!this}" action="{!c.onInit}"/>  -->
+    <aura:attribute name="columns" type="List"/>
+
+    <aura:attribute name="pricebookId" type="String"/>
+    <aura:attribute name="isActive" type="Boolean"/>
     <aura:attribute name="PbEntryWrappers" type="Object[]"/>
-    <lightning:card iconName="standard:account" title="Pricebook Details">
-        <lightning:layout class="lightning-main-container">
-            <div class="container">
-                <div class="table">
-                    <table class="slds-table slds-table_bordered slds-table_cell-buffer table-main">
-                        <thead>
-                        <tr class="slds-text-title_caps">
-                            <th scope="col">
-                                <div class="slds-truncate" title="Account name">Product</div>
-                            </th>
-                            <th scope="col">
-                                <div class="slds-truncate" title="Country">Old Price</div>
-                            </th>
-                            <th scope="col">
-                                <div class="slds-truncate" title="Rating">New Price</div>
-                            </th>
-                            <th scope="col">
-                                <div class="slds-truncate" title="Rating">Active</div>
-                            </th>
-                            <th scope="col">
-                                <div class="slds-truncate" title="Active">Actions</div>
-                            </th>
-                        </tr>
-                        </thead>
-                        <tbody class="table-body">
-                        <aura:iteration items="{!v.PbEntryWrappers}" var="wrapper" indexVar="index">
-                            <tr aura:id="row" onclick="{!c.tableRowClicked}" data-id="{!wrapper.id}"
-                                data-index="{!index}">
-                                <td data-label="Product" class="table-name-section">
-                                        {!wrapper.name}
-                                </td>
-                                <td data-label="Is Standard">
-                                        {!wrapper.oldPrice}
+    <aura:handler event="c:AS_DiscountManager_PriceBook_Event" action="{!c.loadDetails}"/>
+    <aura:registerEvent type="c:AS_DiscountManager_UpdatePbList_Event" name="updatePricebookListEvent"/>
 
-                                </td>
-                                <td data-label="Is Active">
-                                        {!wrapper.newPrice}
-                                </td>
+    <lightning:card class="lightning-card" iconName="standard:account" title="Pricebook Details">
 
-                                <td data-label="Is Active">
-                                        {!wrapper.active}
-                                </td>
+        <aura:set attribute="actions">
+            <aura:if isTrue="{!v.PbEntryWrappers.length > 0}">
+                <aura:if isTrue="{!v.isActive}">
+                    <lightning:button label="Deactivate" onclick="{!c.deactivatePb}"/>
+                    <aura:set attribute="else">
+                        <lightning:button label="Activate" onclick="{!c.activatePb}"/>
+                    </aura:set>
+                </aura:if>
+                <lightning:button label="Add Product"/>
+                <lightning:buttonMenu alternativeText="Show menu" variant="border" class="buttonMenu"
+                                      menuAlignment="right">
+                    <lightning:menuItem value="MenuItemOne" label="Go to Details Page"/>
+                    <lightning:menuItem value="MenuItemTwo" label="Edit Pricebook"/>
+                    <lightning:menuItem value="MenuItemThree" label="Delete Pricebook" onactive="{!c.deletePb}"/>
+                </lightning:buttonMenu>
+            </aura:if>
+        </aura:set>
+        <aura:if isTrue="{!v.PbEntryWrappers.length > 0}">
+            <lightning:layout class="lightning-main-container">
+                <div class="container">
+                    <div class="table">
 
-                                <td data-label="Actions">
-                                </td>
-                            </tr>
-                        </aura:iteration>
-                        </tbody>
-                    </table>
+                        <lightning:datatable data="{! v.PbEntryWrappers }"
+                                             columns="{! v.columns }"
+                                             keyField="id"
+                                             hideCheckboxColumn="true"
+                                             onrowaction="{! c.handleRowAction }"/>
+                    </div>
                 </div>
-            </div>
-        </lightning:layout>
+            </lightning:layout>
+            <aura:set attribute="else">
+            <p style="text-align: center"> Choose Pricebook from List or add Product if Pricebook is empty.</p>
+            </aura:set>
+        </aura:if>
     </lightning:card>
     <c:AS_SendResultToast aura:id="toastMaker"/>
     <c:AS_SendErrorToast aura:id="errorToastMaker"/>
