--- a/src/aura/AS_DiscountManager_PB_DetailsSection/AS_DiscountManager_PB_DetailsSection.css
+++ b/src/aura/AS_DiscountManager_PB_DetailsSection/AS_DiscountManager_PB_DetailsSection.css
@@ -1,21 +1,25 @@
-/**
- * Created by tomas on 09.12.2020.
- */
 .THIS {
 }
 
-.THIS .container{
+.THIS .container {
     width: 100%;
     height: 100%;
 }
 
-.THIS .table-name-section{
+.THIS .cardButtons {
+    display: flex;
+    justify-content: flex-end;
+    margin: 0.5rem;
+}
+
+
+.THIS .table-name-section {
     max-width: 4rem;
-    text-overflow:ellipsis;
+    text-overflow: ellipsis;
     overflow: hidden;
 }
 
-.THIS .table-name-section:hover{
+.THIS .table-name-section:hover {
     max-width: none;
     overflow: visible;
     background-color: inherit;
